.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${REPO_NAME}
  labels:
    role: ${REPO_NAME}
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    role: ${REPO_NAME}
